Refactoring of signing initialization code to PKCS11Helper Readme updated with screenshots Added a timer to keep sessions alive if device session timeout is enabled.

--- a/src/main/resources/com/ellipticsecure/apps/signer/certform.fxml
+++ b/src/main/resources/com/ellipticsecure/apps/signer/certform.fxml
@@ -1,57 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0"
-            prefWidth="400.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.ellipticsecure.apps.signer.CertFormController">
+
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ellipticsecure.apps.signer.CertFormController">
     <content>
-        <VBox alignment="BOTTOM_CENTER" prefHeight="300.0" prefWidth="400.0" spacing="10.0"
-              AnchorPane.bottomAnchor="5.0">
+        <VBox alignment="BOTTOM_CENTER" prefHeight="300.0" spacing="10.0" AnchorPane.bottomAnchor="5.0">
             <children>
-                <Label text="Test Certificate Information"/>
+                <Label text="Test Certificate Information" />
                 <GridPane hgap="5.0" vgap="10.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <children>
-                        <Label text="Common Name" GridPane.rowIndex="0"/>
-                        <TextField fx:id="cnTf" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-                        <Label text="Locality (City)" GridPane.rowIndex="1"/>
-                        <TextField fx:id="localityTf" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                        <Label text="ISO Country Code" GridPane.rowIndex="2"/>
-                        <TextField fx:id="countryTf" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                        <Label text="Validity (days)" GridPane.rowIndex="3"/>
+                        <Label text="Common Name" GridPane.rowIndex="0" />
+                        <TextField fx:id="cnTf" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                        <Label text="Locality (City)" GridPane.rowIndex="1" />
+                        <TextField fx:id="localityTf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label text="ISO Country Code" GridPane.rowIndex="2" />
+                        <TextField fx:id="countryTf" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Validity (days)" GridPane.rowIndex="3" />
                         <Spinner fx:id="validitySpinner" editable="true" GridPane.columnIndex="1" GridPane.rowIndex="3">
                             <valueFactory>
-                                <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="30"
-                                                                                max="365" min="1"/>
+                                <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="30" max="365" min="1" />
                             </valueFactory>
                         </Spinner>
                     </children>
                     <rowConstraints>
-                        <RowConstraints/>
-                        <RowConstraints/>
-                        <RowConstraints/>
-                        <RowConstraints/>
-                        <RowConstraints/>
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
                     </rowConstraints>
                 </GridPane>
                 <HBox alignment="BOTTOM_CENTER" prefWidth="400.0" spacing="10.0">
                     <padding>
-                        <Insets bottom="10.0"/>
+                        <Insets bottom="10.0" />
                     </padding>
                 </HBox>
             </children>
             <padding>
-                <Insets left="10.0" right="10.0"/>
+                <Insets left="10.0" right="10.0" />
             </padding>
         </VBox>
     </content>
     <buttonTypes>
-        <ButtonType fx:constant="CANCEL"/>
-        <ButtonType fx:constant="OK"/>
+        <ButtonType fx:constant="CANCEL" />
+        <ButtonType fx:constant="OK" />
     </buttonTypes>
+    <stylesheets>
+        <URL value="@main.css" />
+    </stylesheets>
 </DialogPane>
