--- a/src/main/resources/com/ellipticsecure/apps/signer/main.fxml
+++ b/src/main/resources/com/ellipticsecure/apps/signer/main.fxml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.ellipticsecure.apps.signer.SignAppController">
+
+<BorderPane xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ellipticsecure.apps.signer.SignAppController">
     <fx:define>
-        <fx:include fx:id="certDialogPane" source="certform.fxml"/>
+        <fx:include fx:id="certDialogPane" source="certform.fxml" />
     </fx:define>
     <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
     <center>
-        <VBox alignment="CENTER" spacing="10" BorderPane.alignment="CENTER">
-            <Button fx:id="loginBt" onAction="#loginBtAction" prefHeight="50.0" prefWidth="210.0">
+        <VBox alignment="CENTER" fillWidth="false" prefWidth="240.0" spacing="10.0" BorderPane.alignment="CENTER">
+            <Button fx:id="loginBt" defaultButton="true" onAction="#loginBtAction" prefHeight="50.0" prefWidth="240.0">
                 Device Log-in
             </Button>
 
-            <Button fx:id="generateCertBt" disable="true" onAction="#generateCertBtAction" prefHeight="50.0"
-                    prefWidth="210.0">
+            <Button fx:id="generateCertBt" disable="true" onAction="#generateCertBtAction" prefHeight="50.0" prefWidth="240.0">
                 Generate Test Certificate
             </Button>
         </VBox>
@@ -28,18 +29,30 @@
             <children>
                 <VBox>
                     <children>
-                        <Label text="Select certificate:"/>
-                        <ChoiceBox fx:id="keysCb" disable="true" prefHeight="50.0" prefWidth="210.0"/>
+                        <Label text="Select certificate:" />
+                        <ChoiceBox fx:id="keysCb" disable="true" prefHeight="50.0" prefWidth="210.0" />
                     </children>
                 </VBox>
-                <Label fx:id="dropTarget" disable="true" onDragDropped="#dropFileAction" onDragOver="#dragOver"
-                       prefHeight="100.0" prefWidth="200.0"
-                       style="-fx-padding: 5; -fx-border-radius:5; -fx-border-style: dotted;">Drop PDF file here to sign
+                <Label id="dropTarget" fx:id="dropTarget" disable="true" onDragDropped="#dropFileAction" onDragOver="#dragOver" prefHeight="100.0" prefWidth="200.0" style="-fx-padding: 5; -fx-border-radius:5; -fx-border-style: dotted;">Drop PDF file here to sign
                 </Label>
             </children>
             <padding>
-                <Insets top="10.0"/>
+                <Insets top="10.0" />
             </padding>
         </HBox>
     </bottom>
+   <left>
+       <Hyperlink onAction="#iconClickAction">
+           <graphic>
+               <ImageView fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                   <image>
+                       <Image url="@icon_512x512.png"/>
+                   </image>
+               </ImageView>
+           </graphic>
+       </Hyperlink>
+   </left>
+    <stylesheets>
+        <URL value="@main.css" />
+    </stylesheets>
 </BorderPane>
